--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
   <div class="container" id="container">
 
     <!-- Formulario de registro -->
-    <div class="form-container sign-up-container">
+    <div class="form-container sign-up-container" id="signUpForm">
       <form id="registerForm">
         <img src="veterinaria.jpeg" alt="Veterinario" class="logo">
         <h1>Crear cuenta</h1>
@@ -36,7 +36,7 @@
     </div>
 
     <!-- Formulario de inicio de sesión -->
-    <div class="form-container sign-in-container">
+    <div class="form-container sign-in-container" id="signInForm">
       <form id="loginForm">
         <img src="veterinaria.jpeg" alt="Veterinario" class="logo">
         <h1>Iniciar sesión</h1>
@@ -74,5 +74,6 @@
   </footer>
 
   <script src="main.js"></script>
+  
 </body>
 </html>
